plugins {
    id "java"
//    id "com.github.johnrengelman.shadow" version "6.1.0"
}

group 'nl.elec332.planetside2'
version '1.0-SNAPSHOT'

sourceCompatibility = targetCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    implementation "com.google.code.gson:gson:2.8.6"
    implementation "com.neovisionaries:nv-websocket-client:2.14"
    compileOnly "com.neovisionaries:nv-websocket-client:2.14"
}

compileJava {
    options.compilerArgs += ['--add-reads', 'nl.elec332.planetside2api=ALL-UNNAMED']
}

//tasks.jar.enabled = false
//tasks.build.dependsOn(shadowJar)
//
//shadowJar {
//    minimize()
//}